--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 body {background-color:black; font-family:arial;color:white}
 h1{color:grey;font-family:verdana}
-.maindiv{ 
-    background-color:white; font-family:black;width:300px;
-    padding:20 px; border-radius:25 px;
+.maindiv{
+    background-color: white;
+    color: black;
+    width: 300px;
+    padding: 20px;
+    border-radius: 25px;
+    margin: auto;
+}
 
 
